Revision history for Perl module Net::Curl::Promiser

0.06
- Add experimental Promise::XS support.
- setopt() now fails if given CURLMOPT_SOCKETFUNCTION or CURLMOPT_SOCKETDATA.
- Clarify in documentation that unless you’re managing a custom event loop
most of the N::C::P interface isn’t relevant.
- Drop Perl 5.8 support.

0.05 Wed 10 Dec 2019
- Add add_handle_p() to Mojo module.
- Update examples/mojo.pl and POD example to be more idiomatic.

0.04 Wed 10 Dec 2019
- Fix glaring, prominent typo in Mojo module.

0.03 Wed 10 Dec 2019
- Make Mojo module use Mojo::Promise rather than Promise::ES6.
- Remove incorrect text about Mojo module’s status.

0.02 Wed 4 Dec 2019
- Add IO::Async & Mojolicious support.

0.01 Fri 20 Sep 2019
- Initial release